Changelog

5.8.0

Create Big Cannons 5.8.0. Comes with a few overhauls to cannon mounts.

Added:
- Added Cannon Mount Extension
 - Replaces Yaw Controller for cannon interface extension
 - Can be placed in six directions as opposed to the Yaw Controller
 - The direction affects which block it will interface with
 - Has a range of one block
Changed:
- Cannon Mount can now be turned around both axes without the Yaw Controller
- Cannon Mount now disassembles on rotation with wrench
- Updated Cannon Mount and Yaw Controller yaw shaft texture to no longer use the special black shaft texture
- The Yaw Controller is no longer obtainable in-game
 - Has not been removed from the mod to preserve already existing builds
- Updated movement checks for mounts and mount extensions
- Cannon Mounts can now be placed upside-down
 - Cannon Mounts can also be flipped by using the wrench
- Changed Cannon Mount item model to be more consistent with in-world appearance
Fixed:
- Fixed rendering of pitch shaft for down-facing cannons
- Fixed display on some ponders
- Fixed autocannon tracer lighting and non-tracer rendering

5.7.2

Create Big Cannons 5.7.2. Critical patch for Copycats+ compat.

Fixed:
- Fixed Copycats+ compat

5.7.1

Create Big Cannons 5.7.1. Now supports Create 0.5.1 patch J on Forge/NeoForge and Fabric/Quilt.
Only 1.20.1 is supported, as Create 0.5.1.j only supports that version. Mod versions on Minecraft 1.18.2 and 1.19.2 will no longer receive support.
5.7.0 was initially released but has been bypassed due to critical fixes required.

Added:
- Added highlighting and documentation for base fuzes
  - Can be toggled in client config
- Added fuzed models for big cannon shell items
Changed:
- Updated Polish translation courtesy of KarolOfGutovo
- Changed AP Shell texture to better show base fuze location
- Changed wording on some tooltips
- Made the Quick-Firing Breech openable using the side lever
- Copycats+ is now supported for 2.1.4