@@ -384,6 +384,14 @@
   "createbigcannons.ponder.cannon_mount/using_extensions.header": "suoısuǝʇxƎ ʇunoW uouuɐƆ buıs∩",
   "createbigcannons.ponder.cannon_mount/using_extensions.text_1": "˙sʞɔoןq ɹoɟ sɐǝɹɐ ǝɔɐɟɹǝʇuı ɐɹʇxǝ ǝpıʌoɹd suoısuǝʇxƎ ʇunoW uouuɐƆ",
   "createbigcannons.ponder.cannon_mount/using_extensions.text_2": "˙sǝpıs ɹıǝɥʇ uo ʍoɹɹɐ ǝɥʇ ʎq pǝʇɐɔıpuı sɐ 'oʇuı ʇuıod ʎǝɥʇ ʇunoɯ ǝɥʇ puǝʇxǝ ʎǝɥ⟘",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.header": "sʇunoW uouuɐƆ pǝxıℲ buıs∩",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_1": "˙ʇods ǝɯɐs ǝɥʇ ʇɐ suouuɐɔ buıɯıɐ ɹoɟ pǝsn ǝq uɐɔ sʇunoW uouuɐƆ pǝxıℲ",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_2": "˙sǝɔɐɟɹǝʇuı ǝpıs ǝɥʇ buısn ʇǝs ʎןןɐnuɐɯ ǝq ʇsnɯ puɐ ʇnduı ɔıʇǝuıʞ ǝsn ʇou op ʎǝɥ⟘",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_3": "˙sǝɔɐɟ ןoɹʇuoɔ ǝɯɐs ǝɥʇ ɥʇıʍ 'ʇunoW uouuɐƆ ɹɐןnbǝɹ ɐ oʇ ɹɐןıɯıs sı ʇunoW uouuɐƆ pǝxıℲ ɐ ɥʇıʍ buıɔɐɟɹǝʇuI",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_4": "ʎןqɯǝssɐ uouuɐƆ",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_5": "uouuɐɔ ǝɹıℲ",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_6": "˙pǝpuǝʇxǝ ǝq ʇouuɐɔ ʇunoW uouuɐƆ pǝxıℲ ǝɥ⟘",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_7": "˙ʇunoW uouuɐƆ pǝxıℲ ǝɥʇ ǝʇɐʇoɹ oʇ ɥɔuǝɹʍ ɐ ǝs∩",
   "createbigcannons.ponder.munitions/adding_tracers.header": "sǝןıʇɔǝظoɹd uouuɐɔ bıq oʇ sɹǝɔɐɹʇ buıppⱯ",
   "createbigcannons.ponder.munitions/adding_tracers.text_1": "˙sǝןıʇɔǝظoɹd uouuɐɔ bıq oʇ pǝppɐ ǝq osןɐ uɐɔ sɹǝɔɐɹʇ 'suoıʇıunɯ uouuɐɔoʇnɐ oʇ uoıʇıppɐ uI",
   "createbigcannons.ponder.munitions/adding_tracers.text_2": "˙ʞɔoןq ǝןıʇɔǝظoɹd ǝɥʇ ɟo ǝpıs ʎuɐ oʇ pǝıןddɐ ǝq uɐɔ sdıʇ ɹǝɔɐɹʇ 'buıznɟ ǝʞıןu∩",
