@@ -384,6 +384,14 @@
   "createbigcannons.ponder.cannon_mount/using_extensions.header": "Using Cannon Mount Extensions",
   "createbigcannons.ponder.cannon_mount/using_extensions.text_1": "Cannon Mount Extensions provide extra interface areas for blocks.",
   "createbigcannons.ponder.cannon_mount/using_extensions.text_2": "They extend the mount they point into, as indicated by the arrow on their sides.",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.header": "Using Fixed Cannon Mounts",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_1": "Fixed Cannon Mounts can be used for aiming cannons at the same spot.",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_2": "They do not use kinetic input and must be manually set using the side interfaces.",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_3": "Interfacing with a Fixed Cannon Mount is similar to a regular Cannon Mount, with the same control faces.",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_4": "Cannon assembly",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_5": "Fire cannon",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_6": "The Fixed Cannon Mount cannot be extended.",
+  "createbigcannons.ponder.cannon_mount/using_fixed_cannon_mounts.text_7": "Use a wrench to rotate the Fixed Cannon Mount.",
   "createbigcannons.ponder.munitions/adding_tracers.header": "Adding tracers to big cannon projectiles",
   "createbigcannons.ponder.munitions/adding_tracers.text_1": "In addition to autocannon munitions, tracers can also be added to big cannon projectiles.",
   "createbigcannons.ponder.munitions/adding_tracers.text_2": "Unlike fuzing, tracer tips can be applied to any side of the projectile block.",
